Add update notice to options menu

--- a/options.html
+++ b/options.html
@@ -4,7 +4,13 @@
     <link rel="stylesheet" type="text/css" href="options.css">
   </head>
   <body>
-    <div class="main-container">
+    <div id="update-container">
+      <div style="display: none;background-color: limegreen;"
+      id="update-notice">
+      Settings Updated
+      </div>
+    </div>
+    <div id="main-container">
       <div id="status-container">
         <!-- show current status -->
         <div class="radio-field-container">
