Add metadata and remove code comments

--- a/options.html
+++ b/options.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Options</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="options.css">
   </head>
   <body>
@@ -12,7 +14,6 @@
     </div>
     <div id="main-container">
       <div id="status-container">
-        <!-- show current status -->
         <div class="radio-field-container">
           <div class="radio-button-container">
             <input type="radio" name="extension-status" value="green">
@@ -31,7 +32,6 @@
       </div>
       <hr>
       <div id="theme-button-container">
-        <!-- show current theme -->
         <div class="radio-field-container">
           <div class="radio-button-container">
             <input type="radio" name="twitter-theme" value="#ffffff">
@@ -53,7 +53,6 @@
       <div id="flavor-text-container">
         <div class="text-field-container">
           <div class="text-label">Flavor Text:</div>
-          <!-- prepopulate with text -->
           <input type="text" id="set-flavor-text">
         </div>
 
@@ -65,7 +64,6 @@
       <div id="set-image-container">
         <div class="text-field-container">
           <div class="text-label">Set Image:</div>
-          <!-- prepopulate with current link -->
           <input type="url" id="set-image">
         </div>
 
